# NPS-ActiveSpace

./: .gitignore  CITATION.cff  ModelManager.py  NestablePool.py  README.md  active_space_utils.py  evaluate_truthing.py  flight_track_truthing.py  pyproject.toml  run_activespace.py  run_eval_truthing.py
NMSIM-Python/: ActiveSpace.py
_DENA/: README.md  __init__.py  requirements.txt
_DENA/config/: template.config
_DENA/resource/: config.py  helpers.py
_DENA/scripts/: README.md  generate_active_space.py  generate_active_space_mesh.py  generate_geographic_metrics.py  helpers.py  run_audible_transits.py  run_audible_transits_circlespace.py  run_ground_truthing.py
legacy_code/: ModelManager.py  NestablePool.py  active_space_utils.py  evaluate_truthing.py  flight_track_truthing.py  run_activespace.py  run_eval_truthing.py
legacy_code/NMSIM-Python/: ActiveSpace.py
nps_active_space/: README.md  __init__.py
nps_active_space/active_space/: __init__.py
nps_active_space/analysis/: AudibleTransits DEV.ipynb  FINAL - 2023 11 21 DEV NPS-ActiveSpace.analysis module.py  helperfunctions.py  helperfunctios.py  imports.py
nps_active_space/analysis/.ipynb_checkpoints/: process_overflights-checkpoint.ipynb
nps_active_space/data/tuning/: O_+000.avg  O_+000.src  O_+005.avg  O_+005.src  O_+010.avg  O_+010.src  O_+015.avg  O_+015.src  O_+020.avg  O_+020.src  O_+025.avg  O_+025.src  O_+030.avg  O_+030.src  O_+035.avg  O_+035.src  O_+040.avg  O_+040.src  O_+045.avg  O_+045.src  O_+050.avg  O_+050.src  O_+055.avg  O_+055.src  O_+060.avg  O_+060.src  O_+065.avg  O_+065.src  O_+070.avg  O_+070.src  O_+075.avg  O_+075.src  O_+080.avg  O_+080.src  O_+085.avg  O_+085.src  O_+090.avg  O_+090.src  O_+095.avg  O_+095.src  (+283 more)
nps_active_space/ground_truthing/: README.md  __init__.py
nps_active_space/utils/: README.md  __init__.py  computation.py  models.py
